# virtualServiceGateway_DPDK

./: CMakeLists.txt  COMPLETION_CHECKLIST.md  DPDK_MINIMAL_GUIDE.md  DPDK_QUICK_REFERENCE.md  GETTING_STARTED.md  INDEX.md  PROJECT_SUMMARY.md  README.md  RING_BUFFER_DESIGN.md  RING_BUFFER_VISUAL_GUIDE.md
.github/: copilot-instructions.md
config/: dpi_signatures.conf  vsg.conf
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: analytics.md  architecture.md  containerization.md  dpdk_design.md  dpi.md  metering.md  scaling.md
examples/: README_MINIMAL_DPDK.md  dpdk_common_modifications.h  minimal_dpdk.cpp
include/: batch_processor.h  dpdk_types.h  dpi_classifier.h  mempool_manager.h  pmd_driver.h  qoe_analytics.h  ring_queue.h  ubb_meter.h  worker_pipeline.h
scripts/: README.md  build.sh  docker_build.sh  docker_run.sh  test.sh
src/: main.cpp
src/analytics/: flow_kpi.cpp  qoe_collector.cpp  telemetry_aggregator.cpp
src/dpdk/: batch_processor.cpp  mempool_manager.cpp  pmd_driver.cpp  ring_queue.cpp  worker_pipeline.cpp
src/dpi/: classifier_pipeline.cpp  dpi_worker.cpp  signature_manager.cpp
src/metering/: counter_manager.cpp  reconciliation.cpp  ubb_meter.cpp
tests/: test_analytics.cpp  test_metering.cpp  test_pipeline.cpp
